@@ -27,12 +27,14 @@
     <java.version>13</java.version>
     <revision>0.0.1-SNAPSHOT</revision>
     <minimal.maven.version>3.6.1</minimal.maven.version>
+    <exec.mainClass>com.epam.courses.java.fundamentals.intro.Hello</exec.mainClass>
+    <jar.name>${project.name}-${revision}</jar.name>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <!--endregion-->
 
     <!--region BOMs -->
-    <spring-boot.version>2.1.8.RELEASE</spring-boot.version>
+    <spring-boot.version>2.1.9.RELEASE</spring-boot.version>
     <!--endregion-->
 
     <!--region Libs -->
@@ -40,7 +42,7 @@
     <manifold-version>2019.1.14</manifold-version>
     <vavr.version>1.0.0-alpha-3</vavr.version>
 
-    <checker.version>2.11.0</checker.version>
+    <checker.version>2.11.1</checker.version>
     <annotations.version>17.0.0</annotations.version>
     <jcip-annotations.version>1.0</jcip-annotations.version>
     <spotbugs.version>4.0.0-beta4</spotbugs.version>
@@ -61,9 +63,14 @@
     <!--<argLine>&#45;&#45;enable-preview -Xplugin:Manifold</argLine>-->
     <argLine>--enable-preview</argLine>
 
+    <maven-source-plugin.version>3.1.0</maven-source-plugin.version>
+    <origSourceDir>${project.basedir}/src/main/java</origSourceDir>
+    <sourceDir>${origSourceDir}</sourceDir>
+    <delombokedSourceDir>${project.build.directory}/delombok</delombokedSourceDir>
+
     <maven-assembly-plugin.version>3.1.1</maven-assembly-plugin.version>
-    <maven-assembly-plugin.descriptorRef>jar-with-dependencies</maven-assembly-plugin.descriptorRef>
-    <maven-assembly-plugin.mainClass>ru.vlapin.courses.java.fundamentals.intro.Hello</maven-assembly-plugin.mainClass>
+    <maven-assembly-plugin.descriptorSuffix>jar-with-dependencies</maven-assembly-plugin.descriptorSuffix>
+    <maven-assembly-plugin.mainClass>${exec.mainClass}</maven-assembly-plugin.mainClass>
     <maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>
     <assembly.skipAssembly>true</assembly.skipAssembly>
 
@@ -81,9 +88,21 @@
     <lombok.addOutputDirectory>false</lombok.addOutputDirectory>
     <lombok.sourceDirectory>${project.basedir}/src/main/java</lombok.sourceDirectory>
     <lombok.testSourceDirectory>${project.basedir}/src/test/java</lombok.testSourceDirectory>
+
+    <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
+    <exec.executable>java</exec.executable>
     <!--endregion-->
 
   </properties>
+
+  <profiles>
+    <profile>
+      <id>build</id>
+      <properties>
+        <sourceDir>${delombokedSourceDir}</sourceDir>
+      </properties>
+    </profile>
+  </profiles>
 
   <dependencyManagement>
     <dependencies>
@@ -283,7 +302,7 @@
               </manifest>
             </archive>
             <descriptorRefs>
-              <descriptorRef>${maven-assembly-plugin.descriptorRef}</descriptorRef>
+              <descriptorRef>${maven-assembly-plugin.descriptorSuffix}</descriptorRef>
             </descriptorRefs>
           </configuration>
           <executions>
@@ -292,6 +311,18 @@
               <phase>package</phase>
               <goals>
                 <goal>single</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <artifactId>maven-source-plugin</artifactId>
+          <version>${maven-source-plugin.version}</version>
+          <executions>
+            <execution>
+              <id>attach-sources</id>
+              <goals>
+                <goal>jar</goal>
               </goals>
             </execution>
           </executions>
@@ -468,6 +499,19 @@
           </executions>
         </plugin>
 
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>exec-maven-plugin</artifactId>
+          <version>${exec-maven-plugin.version}</version>
+          <configuration>
+            <arguments>
+              <argument>-jar</argument>
+              <argument>--enable-preview</argument>
+              <argument>target/${jar.name}-${maven-assembly-plugin.descriptorSuffix}.jar</argument>
+            </arguments>
+          </configuration>
+        </plugin>
+
       </plugins>
     </pluginManagement>
 
@@ -476,6 +520,10 @@
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
       </plugin>
+      <plugin>
+        <artifactId>maven-source-plugin</artifactId>
+      </plugin>
+
       <plugin>
         <artifactId>maven-enforcer-plugin</artifactId>
       </plugin>
